<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/main_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_search_return"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:padding="14dp"
            android:scaleType="fitCenter"
            android:src="@drawable/search_return_icon" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:paddingTop="4dp" >

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_edit_bg"
                android:hint="@string/search_hint"
                android:textColor="@color/black_color"
                android:textColorHint="#b4b4b4"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_search_del"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:contentDescription="@null"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/search_del_icon" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:text="@string/search_text"
            android:textColor="@color/white_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:padding="7dp"
            android:scaleType="fitCenter"
            android:src="@drawable/search_hot_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_hot"
            android:textColor="#444444"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3" />

    <GridView
        android:id="@+id/gv_search_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="15dp"
        android:horizontalSpacing="6dp"
        android:numColumns="3"
        android:verticalSpacing="6dp" >
    </GridView>

    <LinearLayout
        android:id="@+id/search_change"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/search_exchange_bg"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" 
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_change"
            android:textColor="@color/white_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@color/white_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:padding="7dp"
            android:scaleType="fitCenter"
            android:src="@drawable/search_history_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history"
            android:textColor="#444444"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_search_history_null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:gravity="center_vertical"
                android:text="@string/search_history_null"
                android:textColor="#444444"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#ededed" />
        </LinearLayout>
        
        <ListView 
            android:id="@+id/search_history_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@color/transparent"
            android:divider="@color/transparent"
            android:dividerHeight="0dp"></ListView>
        
    </LinearLayout>

</LinearLayout>