<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white_color"
        android:textSize="@dimen/login_app_name_size"
        android:textStyle="bold" 
        android:gravity="center"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="35dp"
        android:padding="12dp">
        
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_select"
        android:textColor="@color/white_color"
        android:textSize="18sp"/>
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="#27628b"/>
        
        <com.andexert.library.RippleView
            android:id="@+id/login_by_weixin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/login_item_margin_top"
            android:padding="@dimen/login_item_padding"
            android:background="@drawable/login_item_bg"
            ripple:rv_color="@color/gray"
            ripple:rv_type="rectangle"
            >
            
            <ImageView
                android:id="@+id/weixin_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:contentDescription="@null"
                android:padding="1dp"
                android:src="@drawable/weixin_icon"
                android:layout_centerVertical="true"

                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_byweixin"
                android:textColor="@color/white_color"
                android:layout_marginLeft="3dp"
                android:textSize="@dimen/login_item_text_size"
                android:layout_toRightOf="@id/weixin_iv"
                android:layout_centerVertical="true"
                />
            
        </com.andexert.library.RippleView>
        <com.andexert.library.RippleView
            android:id="@+id/login_by_qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/login_item_margin_top"
            android:padding="@dimen/login_item_padding"
            android:background="@drawable/login_item_bg"
            ripple:rv_color="@color/gray"
            ripple:rv_type="rectangle"
            >
            
            <ImageView
                android:id="@+id/qq_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:contentDescription="@null"
                android:padding="1dp"
                android:src="@drawable/qq_icon"
                android:layout_centerVertical="true"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_byqq"
                android:textColor="@color/white_color"
                android:layout_marginLeft="3dp"
                android:textSize="@dimen/login_item_text_size"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/qq_iv"
                />
            
        </com.andexert.library.RippleView>
        <com.andexert.library.RippleView
            android:id="@+id/login_by_weibo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/login_item_margin_top"
            android:padding="@dimen/login_item_padding"
            android:background="@drawable/login_item_bg"
            ripple:rv_color="@color/gray"
            ripple:rv_type="rectangle"
            >
            
            <ImageView
                android:id="@+id/weibo_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:contentDescription="@null"
                android:padding="1dp"
                android:src="@drawable/weibo_icon"
                android:layout_centerVertical="true"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_byweibo"
                android:textColor="@color/white_color"
                android:layout_marginLeft="3dp"
                android:textSize="@dimen/login_item_text_size"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/weibo_iv"

                />
            
        </com.andexert.library.RippleView>
        <com.andexert.library.RippleView
            android:id="@+id/login_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/login_item_margin_top"
            android:padding="@dimen/login_item_padding"
            android:background="@drawable/login_item_bg"
            ripple:rv_color="@color/gray"
            ripple:rv_type="rectangle"
            >
            
            <ImageView
                android:id="@+id/return_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:contentDescription="@null"
                android:padding="1dp"
                android:src="@drawable/return_icon"
                android:layout_centerVertical="true"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_return_text"
                android:textColor="@color/white_color"
                android:layout_marginLeft="3dp"
                android:textSize="@dimen/login_item_text_size"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/return_iv"
                />
            
        </com.andexert.library.RippleView>
        
    </LinearLayout>
    
</LinearLayout>
