<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context="com.cnwir.gongxin.ui.setting.SettingActivity">

    <include
        android:id="@+id/title"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/push_setting_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_push"
                android:textColor="@color/black_color"
                android:textSize="@dimen/setting_text_size" />

            <RadioButton
                android:id="@+id/push_switch_rb"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/card_select_btn"
                android:button="@null" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5" />

        <com.andexert.library.RippleView
            android:id="@+id/cache_clear_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            ripple:rv_color="@color/gray"
            ripple:rv_type="rectangle">

            <TextView
                android:id="@+id/cache_setting_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cache_clear"
                android:textColor="@color/black_color"
                android:textSize="@dimen/setting_text_size" />

            <TextView
                android:id="@+id/cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="0"
                android:textSize="16sp"
                android:visibility="gone" />
        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_row"
            android:padding="10dp"
            ripple:rv_color="@color/gray"
            ripple:rv_type="rectangle">

            <TextView
                android:id="@+id/version_setting_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_update"
                android:textColor="@color/black_color"
                android:textSize="@dimen/setting_text_size" />

            <TextView
                android:id="@+id/version_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="版本号"
                android:textColor="@color/black_color"
                android:textSize="16sp" />

        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/change_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_row"
            android:padding="10dp"
            ripple:rv_color="@color/gray"
            ripple:rv_type="rectangle">

            <TextView
                android:id="@+id/change_theme_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_theme"
                android:textColor="@color/black_color"
                android:textSize="@dimen/setting_text_size" />


        </com.andexert.library.RippleView>

    </LinearLayout>

</LinearLayout>