<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/maincolor"
        android:orientation="horizontal" >

        <com.cnwir.gongxin.view.CircleImageView
            android:id="@+id/home_iv_menu"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:contentDescription="@null"
            android:padding="8dp"
            android:src="@drawable/menu_icon" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white_color"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/home_iv_search"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@null"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/search_icon" />
    </LinearLayout>

    <!--
    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>
    -->

    <com.cnwir.gongxin.view.viewpager.CustomViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
       android:layout_height="0dp"
        android:layout_weight="1" >
    </com.cnwir.gongxin.view.viewpager.CustomViewPager>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/transparent"
        >
        <ImageView
            android:id="@+id/arc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/btn_cloud_master_bg"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
                        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/tab_bottom_bg"
        android:orientation="horizontal" 
        android:layout_below="@id/arc"
        android:layout_gravity="bottom"
        >

        <RadioButton
            android:id="@+id/home_rb_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/tab_bottom_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab1_icon_sel"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/tab_one_text"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/home_rb_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/tab_bottom_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab2_icon_sel"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/tab_two_text"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp" />

        <RadioButton

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/tab_bottom_bg"
            android:button="@null"
            android:drawableBottom="@drawable/tabbar_clouddesktop"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:text="  "
            android:textColor="@color/tab_text_color"
            android:textSize="12sp"
            android:visibility="invisible"
            />

        <RadioButton
            android:id="@+id/home_rb_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/tab_bottom_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab3_icon_sel"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/tab_three_text"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/home_rb_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/tab_bottom_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab4_icon_sel"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/tab_four_text"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp" />
    </RadioGroup>

        <ImageButton
            android:id="@+id/home_clouddesktop_ibtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabbar_clouddesktop"
            android:background="@color/transparent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</LinearLayout>